# app/models/event.rb
@@ -1,2 +1,8 @@
 class Event < ApplicationRecord
+  has_many :bets, dependent: :destroy
+
+  validates :name, presence: true
+  validates :start_time, presence: true
+  validates :odds, presence: true, numericality: { greater_than: 0 }
+  validates :status, presence: true, inclusion: { in: %w[upcoming ongoing completed] }
 end
